# simtfl

./: .flake8  .gitignore  LICENSE  README.md  check.sh  gendoc.sh  pyproject.toml
.github/workflows/: flake8.yml  lints.yml  tests.yml
doc/: patterns.md
simtfl/: __init__.py  demo.py  logging.py  message.py  network.py  node.py  runner.py  util.py
simtfl/bc/: __init__.py  chain.py  demo.py
simtfl/bft/: __init__.py  chain.py
simtfl/bft/streamlet/: __init__.py  chain.py  node.py
