[tool.poetry]
name = "simtfl"
version = "0.1.0"
description = "Experimental simulator for Trailing Finality Layer"
authors = ["Daira Emma Hopwood <daira@jacaranda.org>", "Nate Wilcox <nathan+dev@electriccoin.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
simpy = "^4"

[tool.poetry.dev-dependencies]
flake8 = "^6"
pdoc = "^14"

[tool.poetry.scripts]
demo = "simtfl.demo:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
